header and card components created

--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -1,1 +1,13 @@
 /* All styles for your Card Components live here */
+.card-banner {
+    display: flex;
+}
+
+.card-banner p {
+    width: 50px;
+}
+
+.card-banner img {
+    width: 500px;
+    height: 300px;
+}
