--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -1,1 +1,30 @@
 /* All styles for your header Components live here */
+.image-thumbnail img {
+    padding-top: 10px;
+    height: 50px;
+    width: 50px;    
+}
+
+.header-container {
+    display: flex;    
+}
+
+.header-title {
+    display: flex;
+    align-items: baseline;
+    padding-left: 10px;
+    height: 40px;
+}
+
+.header-title p {
+    color: grey;
+    font-size: 12px;
+    padding-left: 5px;
+}
+
+.header-content {
+    margin: 10px;
+}
+
+
+
