--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -2,7 +2,7 @@
 .card-banner img {
     float: right;
     width: 520px;
-    height: 300px;
+    height: 280px;
     margin-right: 20px;
     border-radius: 10px 10px 0 0;
 }
@@ -13,7 +13,7 @@
     padding-left: 10px;
     margin-right: 20px;
     padding-right: 10px;
-    border: 1px solid grey;
+    border: 1px solid lightgrey;
     border-top: none;
     border-radius: 0 0 10px 10px;
     
