--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -19,6 +19,11 @@
     
 }
 
+.card-container a {
+    text-decoration: none;
+    color: black;
+}
+
 .card-content h4 {
     padding-top: 10px;
 }
