--- a/Project-II-Calculator/calculator/src/App.css
+++ b/Project-II-Calculator/calculator/src/App.css
@@ -1,3 +1,9 @@
+
+
 .calcContainer {
     max-width: 600px;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    border: 2px solid lightgrey;
 }
