--- a/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
+++ b/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
@@ -7,5 +7,5 @@
     height: 100px;
     font-size: 100px;
     padding: 20px 20px 10px 0;
-    border: 2px solid lightgrey;
+    border-bottom: 2px solid lightgrey;
 }
