--- a/Project-II-Calculator/calculator/src/App.css
+++ b/Project-II-Calculator/calculator/src/App.css
@@ -1,9 +1,9 @@
 
 
 .calcContainer {
-    max-width: 600px;
-    margin: 0;
+    max-width: 300px;
+    margin: 0 auto;
     padding: 0;
     font-family: sans-serif;
-    border: 2px solid lightgrey;
+    border: 2px solid grey;
 }
