--- a/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
+++ b/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
@@ -5,7 +5,7 @@
     color: white;
     text-align: right;
     height: 100px;
-    font-size: 100px;
-    padding: 20px 20px 10px 0;
-    border-bottom: 2px solid lightgrey;
+    font-size: 75px;
+    padding: 10px 5px 0 0;
+    border-bottom: 2px solid grey;
 }
